@@ -25,5 +25,5 @@ $conf['smiley_hack'] = 0;
 $conf['complex_tables'] = 0;
 $conf['duplicate_notes'] = 0;
 $conf['dw_priority'] = 0;
-
+$conf['winstyle'] = 0;
 
