@@ -1,4 +1,4 @@
-rev 14-Mar_18-14_22
+rev 14-Apr_01-10_26
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -343,3 +343,9 @@ Option to give Dokuwiki editor priority on startup
 
 18 Feb
 Move plugins list from settings to new admin panel
+
+19 Feb
+Added new language files to fckg/lang/
+
+1 Apr
+Added winstyle option
